syntax = "proto3";

package store;

message TrafficPoint {
  int64 time = 1;
  string namespace = 2;
  string proxy_name = 3;
  string key_name = 4;
}